# lightcontroller-stm32f407

./: .gitignore  CMakeLists.txt  HowTo  README.md  debug  flashing  remote.gdbconf
.github/: dependabot.yml
.github/workflows/: cmake.yml  code-lint.yml  codeql-analysis.yml
linker/: libopencm3_stm32f4.ld
python3/: controller_simulated.py  lightcontroller.py  requirements.txt  test_controller_simulated.py
src/: atx.c  atx.h  button.c  button.h  button_consol.c  button_consol.h  consol.c  consol.h  decoder.c  decoder.h  lightcontrol.c  lightcontrol.h  main.c  rgbhsi.c  rgbhsi.h  string_helperfunctions.c  string_helperfunctions.h  tags  timeout_module.c  timeout_module.h  uart5.c  uart5.h  usart1.c  usart1.h  usart3.c  usart3.h  wait.c  wait.h  ws2812b.c  ws2812b.h
